<resources>
    <string name="app_name">Report</string>
    <string name="action_settings">Settings</string>
    <string name="login_out">%1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="report_back">back</string>
    <string name="report_title">Created on %1$s</string>
    <string name="tv_created_text">%1$s</string>
    <string name="tv_note_text">%1$s</string>
    <string name="tv_show_note">%1$s</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_email">Email</string>
    <string name="title_note">Note:</string>
    <string name="title_tags">Tags:</string>
    <string name="tv_show_tags">%1$s</string>
    <string name="profile_card_name">Full Name</string>
    <string name="tv_show_about">%1$s</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="login_welcome">Welcome %1$s</string>
    <string name="welcome_back">Welcome back %1$s</string>
    <string name="error_login">Login before creating a report</string>
    <string name="failed_userinfo">Failed to get user info</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="language">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_dutch">Dutch</string>
    <string name="new_report_layout">Create new question template</string>
    <string name="logo">logo</string>
    <string name="not_loggedin">Not logged in</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="tags">Tags</string>
    <string name="note">Note</string>
    <string name="create">Create</string>
    <string name="failed_create_report">Failed to create report</string>
    <string name="tags_not_empty">Tags can not be empty</string>
    <string name="notes_not_empty">Notes can not be empty</string>
    <string name="picture_select">Select Picture</string>
    <string name="not_save_image">Could not save image</string>
</resources>
