<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreateReportActivity"
    android:id="@+id/show_report_view">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/show_report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:id="@+id/btn_report_back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableStart="@drawable/arrow_left"
            android:text="@string/report_back"
            android:textColor="@color/darkgray" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/tv_note_title"
            android:text="@string/title_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/show_report_toolbar"
            app:layout_constraintStart_toStartOf="@+id/tv_show_note" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/tv_show_note"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_show_note"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_note_title"/>

    <TextView
            android:id="@+id/tv_tags_title"
            android:text="@string/title_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_show_note"
            app:layout_constraintStart_toStartOf="@+id/tv_show_tags"/>

    <TextView
            android:id="@+id/tv_show_tags"
            android:text="@string/tv_show_tags"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tags_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>