<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UnusedAttribute,ContentDescription">

    <EditText
            android:id="@+id/firstInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/register_first_name"
            android:contentDescription="@string/register_first_name"
            android:textColorHint="@color/darkgray"
            android:inputType="text"
            android:autofillHints="firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/lastInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:ems="10"
            android:hint="@string/register_last_name"
            android:contentDescription="@string/register_last_name"
            android:textColorHint="@color/darkgray"
            android:inputType="text"
            android:autofillHints="lastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/userInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:ems="10"
            android:hint="@string/username"
            android:contentDescription="@string/username"
            android:textColorHint="@color/darkgray"
            android:inputType="text"
            android:autofillHints="username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/passInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:hint="@string/password"
            android:contentDescription="@string/password"
            android:textColorHint="@color/darkgray"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/cPassInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            android:ems="10"
            android:hint="@string/register_confirm_password"
            android:contentDescription="@string/register_confirm_password"
            android:textColorHint="@color/darkgray"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="390dp"
            android:ems="10"
            android:hint="@string/register_email"
            android:contentDescription="@string/register_email"
            android:textColorHint="@color/darkgray"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:autofillHints="email"
            app:layout_constraintStart_toStartOf="parent"/>
</RelativeLayout>